# cost-intel

./: .env.example  .gitignore  AGENTS.md  AGENTS.md.project  CHANGELOG.md  DOGFOOD_RETROSPECTIVE.md  LICENSE  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  README.md  SESSION_HANDOFF.md  cost-intel.db  mission-phase1.md  mission-phase2.md  plan.md  pyproject.toml
.dogfood-data/: cost-intel.db
.github/workflows/: ci.yml  publish.yml
examples/: config.yaml  github-actions-cost-gate.yml
scripts/: bootstrap.sh  dogfood.sh
src/cost_intel/: __init__.py  __main__.py  alerts.py  budget.py  cli.py  compare.py  config.py  db.py  duration.py  estimate.py  gate.py  guard.py  ingest.py  migration_runner.py  optimize.py  otel.py  pricing.py  prompt_opt.py  quality.py  record.py  report.py  trends.py  utils.py
src/cost_intel/adapters/: __init__.py  braintrust.py  eval_harness.py
src/cost_intel/migrations/: 001_initial.sql  002_add_quality.sql  003_add_trace_ids.sql
tests/: conftest.py  test_adapters.py  test_alerts.py  test_cli_cpqp.py  test_compare.py  test_config.py  test_db.py  test_duration.py  test_estimate.py  test_gate.py  test_guard.py  test_ingest.py  test_ingest_csv.py  test_migrations.py  test_optimize.py  test_otel.py  test_pricing.py  test_prompt_opt.py  test_quality.py  test_record.py  test_report.py  test_trends.py  test_utils.py
