[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cost-intel"
version = "0.1.0"
description = "AI spending tracker with cost-quality correlation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Cost Intelligence Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "httpx>=0.25",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.1",
]

[project.scripts]
cost-intel = "cost_intel.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cost_intel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
